@@ -6675,6 +6675,8 @@ accessors are defined:
 
 \fun{GEN}{F2xqX_gcd}{GEN x, GEN y, GEN T}
 
+\fun{GEN}{F2xqX_halfgcd}{GEN x, GEN y, GEN T}
+
 \fun{GEN}{F2xqX_resultant}{GEN x, GEN y, GEN T}
 
 \fun{GEN}{F2xqX_disc}{GEN x, GEN T}
