@@ -2,8 +2,8 @@
 AGM_ATAN_LIMIT                     159      89      56      60
 DIVRR_GMP_LIMIT                     -1       4      -1       4
 EXPNEWTON_LIMIT                     66     197      66      66
-F2x_MUL_KARATSUBA_LIMIT             23      23      15      15
-F2x_MUL_MULII_LIMIT               6265     802     668      42
+F2x_MUL_KARATSUBA_LIMIT             13      13      11      11
+F2x_MUL_MULII_LIMIT               6265     774     662      41
 Flx_BARRETT_QUARTMULII_LIMIT       244      20      29      23
 Flx_BARRETT_HALFMULII_LIMIT        244      23      29      21
 Flx_BARRETT_KARATSUBA_LIMIT        905     905    2561    1172
@@ -33,10 +33,13 @@ Flx_SQR_HALFSQRI_LIMIT               6       4       3       3
 Flx_SQR_KARATSUBA_LIMIT            159     159     330     316
 Flx_SQR_SQRI2_LIMIT               4139     470       8       7
 Flx_SQR_SQRI_LIMIT                1276       5       5       5
-F2xqX_BARRETT_LIMIT                 48      48      48      33
-F2xqX_DIVREM_BARRETT_LIMIT         242     166     145      69
-F2xqX_INVBARRETT_LIMIT              50      58      60      44
-F2xqX_REM_BARRETT_LIMIT            242     166     152      69
+F2xqX_BARRETT_LIMIT                 58      48      56      48
+F2xqX_DIVREM_BARRETT_LIMIT         127     127     127      97
+F2xqX_EXTGCD_LIMIT                 127     127     127      97
+F2xqX_GCD_LIMIT                   1292     884    1292     605
+F2xqX_HALFGCD_LIMIT                 78      89     127     127
+F2xqX_INVBARRETT_LIMIT              38      40      50      50
+F2xqX_REM_BARRETT_LIMIT            127     127     127     101
 FlxqX_BARRETT_LIMIT                 17      17      17      17
 FlxqX_DIVREM_BARRETT_LIMIT          46      46      46      46
 FlxqX_EXTGCD_LIMIT                  44      44      44      44
