@@ -178,9 +178,10 @@ GEN     F2xqX_F2xqXQ_eval(GEN Q, GEN x, GEN S, GEN T);
 GEN     F2xqX_F2xqXQV_eval(GEN P, GEN V, GEN S, GEN T);
 GEN     F2xqX_disc(GEN x, GEN T);
 GEN     F2xqX_divrem(GEN x, GEN y, GEN T, GEN *pr);
+GEN     F2xqX_extgcd(GEN x, GEN y, GEN T,  GEN *ptu, GEN *ptv);
 GEN     F2xqX_gcd(GEN a, GEN b, GEN T);
-GEN     F2xqX_extgcd(GEN a, GEN b, GEN T,  GEN *ptu, GEN *ptv);
 GEN     F2xqX_get_red(GEN S, GEN T);
+GEN     F2xqX_halfgcd(GEN x, GEN y, GEN T);
 GEN     F2xqX_invBarrett(GEN T, GEN Q);
 long    F2xqX_ispower(GEN f, long k, GEN T, GEN *pt_r);
 GEN     F2xqX_mul(GEN x, GEN y, GEN T);
