@@ -2,12 +2,15 @@
 #define __AGM_ATAN_LIMIT                 60
 #define __DIVRR_GMP_LIMIT                4
 #define __EXPNEWTON_LIMIT                66
-#define __F2x_MUL_KARATSUBA_LIMIT        15
-#define __F2x_MUL_MULII_LIMIT            42
-#define __F2xqX_BARRETT_LIMIT            33
-#define __F2xqX_DIVREM_BARRETT_LIMIT     69
-#define __F2xqX_INVBARRETT_LIMIT         44
-#define __F2xqX_REM_BARRETT_LIMIT        69
+#define __F2x_MUL_KARATSUBA_LIMIT        11
+#define __F2x_MUL_MULII_LIMIT            41
+#define __F2xqX_BARRETT_LIMIT            48
+#define __F2xqX_DIVREM_BARRETT_LIMIT     97
+#define __F2xqX_EXTGCD_LIMIT             97
+#define __F2xqX_GCD_LIMIT                605
+#define __F2xqX_HALFGCD_LIMIT            127
+#define __F2xqX_INVBARRETT_LIMIT         50
+#define __F2xqX_REM_BARRETT_LIMIT        101
 #define __Flx_BARRETT_HALFMULII_LIMIT    21
 #define __Flx_BARRETT_KARATSUBA_LIMIT    1172
 #define __Flx_BARRETT_MULII2_LIMIT       16
@@ -76,12 +79,15 @@
 #define __AGM_ATAN_LIMIT                 89
 #define __DIVRR_GMP_LIMIT                4
 #define __EXPNEWTON_LIMIT                197
-#define __F2x_MUL_KARATSUBA_LIMIT        23
-#define __F2x_MUL_MULII_LIMIT            802
+#define __F2x_MUL_KARATSUBA_LIMIT        13
+#define __F2x_MUL_MULII_LIMIT            774
 #define __F2xqX_BARRETT_LIMIT            48
-#define __F2xqX_DIVREM_BARRETT_LIMIT     166
-#define __F2xqX_INVBARRETT_LIMIT         58
-#define __F2xqX_REM_BARRETT_LIMIT        166
+#define __F2xqX_DIVREM_BARRETT_LIMIT     127
+#define __F2xqX_EXTGCD_LIMIT             127
+#define __F2xqX_GCD_LIMIT                884
+#define __F2xqX_HALFGCD_LIMIT            89
+#define __F2xqX_INVBARRETT_LIMIT         40
+#define __F2xqX_REM_BARRETT_LIMIT        127
 #define __Flx_BARRETT_HALFMULII_LIMIT    23
 #define __Flx_BARRETT_KARATSUBA_LIMIT    905
 #define __Flx_BARRETT_MULII2_LIMIT       647
