@@ -35,6 +35,9 @@ long Flx_SQR_SQRI2_LIMIT            = __Flx_SQR_SQRI2_LIMIT;
 long Flx_SQR_SQRI_LIMIT             = __Flx_SQR_SQRI_LIMIT;
 long F2xqX_BARRETT_LIMIT            = __F2xqX_BARRETT_LIMIT;
 long F2xqX_DIVREM_BARRETT_LIMIT     = __F2xqX_DIVREM_BARRETT_LIMIT;
+long F2xqX_EXTGCD_LIMIT             = __F2xqX_EXTGCD_LIMIT;
+long F2xqX_GCD_LIMIT                = __F2xqX_GCD_LIMIT;
+long F2xqX_HALFGCD_LIMIT            = __F2xqX_HALFGCD_LIMIT;
 long F2xqX_INVBARRETT_LIMIT         = __F2xqX_INVBARRETT_LIMIT;
 long F2xqX_REM_BARRETT_LIMIT        = __F2xqX_REM_BARRETT_LIMIT;
 long FlxqX_BARRETT_LIMIT            = __FlxqX_BARRETT_LIMIT;
