@@ -2,12 +2,15 @@
 #define __AGM_ATAN_LIMIT                 56
 #define __DIVRR_GMP_LIMIT                -1
 #define __EXPNEWTON_LIMIT                66
-#define __F2x_MUL_KARATSUBA_LIMIT        15
-#define __F2x_MUL_MULII_LIMIT            668
-#define __F2xqX_BARRETT_LIMIT            48
-#define __F2xqX_DIVREM_BARRETT_LIMIT     145
-#define __F2xqX_INVBARRETT_LIMIT         60
-#define __F2xqX_REM_BARRETT_LIMIT        152
+#define __F2x_MUL_KARATSUBA_LIMIT        11
+#define __F2x_MUL_MULII_LIMIT            662
+#define __F2xqX_BARRETT_LIMIT            56
+#define __F2xqX_DIVREM_BARRETT_LIMIT     127
+#define __F2xqX_EXTGCD_LIMIT             127
+#define __F2xqX_GCD_LIMIT                1292
+#define __F2xqX_HALFGCD_LIMIT            127
+#define __F2xqX_INVBARRETT_LIMIT         50
+#define __F2xqX_REM_BARRETT_LIMIT        127
 #define __Flx_BARRETT_HALFMULII_LIMIT    29
 #define __Flx_BARRETT_KARATSUBA_LIMIT    2561
 #define __Flx_BARRETT_MULII2_LIMIT       30
@@ -76,12 +79,15 @@
 #define __AGM_ATAN_LIMIT                 159
 #define __DIVRR_GMP_LIMIT                -1
 #define __EXPNEWTON_LIMIT                66
-#define __F2x_MUL_KARATSUBA_LIMIT        23
+#define __F2x_MUL_KARATSUBA_LIMIT        13
 #define __F2x_MUL_MULII_LIMIT            6265
-#define __F2xqX_BARRETT_LIMIT            48
-#define __F2xqX_DIVREM_BARRETT_LIMIT     242
-#define __F2xqX_INVBARRETT_LIMIT         50
-#define __F2xqX_REM_BARRETT_LIMIT        242
+#define __F2xqX_BARRETT_LIMIT            58
+#define __F2xqX_DIVREM_BARRETT_LIMIT     127
+#define __F2xqX_EXTGCD_LIMIT             127
+#define __F2xqX_GCD_LIMIT                1292
+#define __F2xqX_HALFGCD_LIMIT            78
+#define __F2xqX_INVBARRETT_LIMIT         38
+#define __F2xqX_REM_BARRETT_LIMIT        127
 #define __Flx_BARRETT_HALFMULII_LIMIT    244
 #define __Flx_BARRETT_KARATSUBA_LIMIT    905
 #define __Flx_BARRETT_MULII2_LIMIT       1004
