@@ -7,6 +7,7 @@ Done for version 2.12.1 (released ??/??/2019):
 
   Added
      1- new GP function rootsof1
+BA   2- [libpari] F2xqX_halfgcd
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
